lavf/movenc: Write total number of tracks as part of metadata.

Fixes ticket #2157.